--- a/ThetaRamadan2020/appsettings.json
+++ b/ThetaRamadan2020/appsettings.json
@@ -1,7 +1,8 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ThetaRamadan2020-2D4225B4-202D-46A2-BB72-1782F2C23AA1;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ThetaRamadan2020-2D4225B4-202D-46A2-BB72-1782F2C23AA1;Trusted_Connection=True;MultipleActiveResultSets=true",
+        "MyCon": "Server=den1.mssql7.gear.host;Database=thetaramdan2020;User ID=thetaramdan2020; Password=Ba19!332?UeX;Trusted_Connection=False"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
